# XMLParser_DS

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  output.out
include/: Unittest.h  reflect.h  stdc++.h  ui.h  xml.h  xmlfile.h
include/cxxcurses/: cxxcurses.hpp  print.hpp  terminal.hpp  utility.hpp
include/cxxcurses/print/: attribute.hpp  color.hpp  color_pair.hpp  glyph.hpp  glyph_string.hpp
include/cxxcurses/terminal/: cursor.hpp  initializer.hpp
src/: Editor.cpp  main.cpp  reflectWork.cpp  test.cpp  ui.cpp  xml.cpp  xmlfile.cpp
test/: .datain2.xml.swp  datain.22xml  datain.xml  datain1.xml  datain2.xml  datain3.xml  datain4.xml  dataout1.xml  dataout2.xml  dataout3.xml  hello.xml  test  test.out  tmp  tmp.cpp  tmp.out  tmpclear
tools/editor/: line.cpp  page.cpp  prompt.cpp  text.cpp
tools/editor/include/: layout.hpp  page.h
